--- a/src/ServiceControl.Config/UI/InstanceAdd/ServiceControlAddView.xaml
+++ b/src/ServiceControl.Config/UI/InstanceAdd/ServiceControlAddView.xaml
@@ -78,9 +78,9 @@
                             Foreground="{StaticResource ErrorBrush}"
                             Text="Must select either an audit or an error instance." />
 
-                <CheckBox IsThreeState="True" Padding="0, -10, 0, 0" IsChecked="{Binding InstallErrorInstance}" KeyDown="CheckBoxError_Indeterminate" Checked="CheckBoxError_Indeterminate">
+                <CheckBox Padding="0, -10, 0, 0" IsChecked="{Binding InstallErrorInstance}">
                     <StackPanel>
-                        <Expander Header="ServiceControl" IsExpanded="{Binding IsServiceControlExpanded}" Margin="0,5,0,5">
+                        <Expander Header="ServiceControl" IsExpanded="{Binding IsServiceControlExpanded}" Margin="0,5,0,5" MouseDown="Button_MouseDown" PreviewMouseDown="Button_MouseDown" PreviewMouseLeftButtonDown="Button_MouseDown">
                             <StackPanel Margin="60,0,60,0">
                                 <Border Margin="0,40,0,20"
                                 BorderBrush="{StaticResource Gray70Brush}"
@@ -240,8 +240,8 @@
                     </StackPanel>
                 </CheckBox>
 
-                <CheckBox IsThreeState="True" Padding="0, -10, 0, 0" IsChecked="{Binding InstallAuditInstance}" KeyDown="CheckBoxAudit_Indeterminate" Checked="CheckBoxAudit_Indeterminate">
-                    <Expander Header="ServiceControl Audit" IsExpanded="{Binding IsServiceControlAuditExpanded}" Margin="0,5,0,5">
+                <CheckBox Padding="0, -10, 0, 0" IsChecked="{Binding InstallAuditInstance}" IsThreeState="False">
+                    <Expander Header="ServiceControl Audit" IsExpanded="{Binding IsServiceControlAuditExpanded}" Margin="0,5,0,5" MouseDown="Button_MouseDown" PreviewMouseDown="Button_MouseDown" PreviewMouseLeftButtonDown="Button_MouseDown">
                         <StackPanel Margin="60,0,60,0">
                             <Border Margin="0,40,0,20"
                                 BorderBrush="{StaticResource Gray70Brush}"
