Update installer to properly handle InstanceName and legacy settings

--- a/src/ServiceControl.Config/UI/InstanceDetails/InstanceDetailsView.xaml
+++ b/src/ServiceControl.Config/UI/InstanceDetails/InstanceDetailsView.xaml
@@ -222,10 +222,10 @@
         </GroupBox>
         <GroupBox Grid.Row="7"
                   Grid.Column="1"
-                  Header="ENDPOINT NAME"
+                  Header="INSTANCE/QUEUE NAME"
                   Margin="0 1 0 0"
                   HeaderTemplate="{StaticResource SimpleHeaderedGroupBox}">
-            <TextBlock FontSize="14px" Text="{Binding Name}" />
+            <TextBlock FontSize="14px" Text="{Binding InstanceName}" />
         </GroupBox>
 
         <GroupBox Grid.Row="8"
