Slighty change style to algin with link formatting

--- a/src/assets/footer.css
+++ b/src/assets/footer.css
@@ -102,7 +102,6 @@ footer a:hover {
 }
 
 .trialLicenseBar {
-  background-color: darkred;
+  background-color: firebrick;
   color: white;
-  font-weight: bold;
 }
